--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -20,6 +20,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Check out repository code
+        uses: actions/checkout@v3
+
       - name: Build app
         uses: ./.github/actions/build
       
@@ -41,4 +44,4 @@ jobs:
       - name: Display structure of downloaded files
         run: ls -R
 
-        
+
