--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -25,6 +25,9 @@ jobs:
 
       - name: Build app
         uses: ./.github/actions/build
+
+      - name: Test app
+        uses: ./.github/actions/test
       
       - name: Upload app
         uses: actions/upload-artifact@v4
