--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Code Quality
+name: Build
 on:
   pull_request:
     types: [assigned, opened, synchronize, reopened, 'ready_for_review']
@@ -23,28 +23,7 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v3
 
-      - name: Build app
-        uses: ./.github/actions/build
-
-      - name: Test app
+      - name: Code quality
         uses: ./.github/actions/test
-      
-      - name: Upload app
-        uses: actions/upload-artifact@v4
-        with:
-          name: app
-          path: ./dist
-
-  test:
-    runs-on: ubuntu-latest
-    needs: build
-    steps: 
-      - name: Download app
-        uses: actions/download-artifact@v4
-        with:
-          name: app
-
-      - name: Display structure of downloaded files
-        run: ls -R
 
 
