--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,8 @@
   "editor.formatOnSave": true,
   "editor.formatOnType": false,
   "editor.defaultFormatter": "biomejs.biome",
-  "files.eol": "\n"
+  "files.eol": "\n",
+  "[github-actions-workflow]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  }
 }
