--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,7 @@
 name: Build
 on:
   pull_request:
-    types: [assigned, opened, synchronize, reopened, 'ready_for_review']
+    types: [assigned, opened, synchronize, reopened, "ready_for_review"]
   push:
     branches:
       - main
@@ -24,6 +24,4 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Code quality
-        uses: ./.github/actions/test
-
-
+        uses: ./.github/actions/code-quality
